@@ -30,7 +30,7 @@ strong, b, .bold		{font-weight:bold; color:inherit;}
 /*	Main wrappers for content & fixed background img
 	============================================= */
 .portal					{-moz-box-sizing:border-box; -webkit-box-sizing:border-box; box-sizing:border-box; display:table; width:100%; height:100%;}
-.main_wrap				{width:100%; min-width:1040px; padding:0px; display:table-cell; background-color:#FFF; border-bottom:1px solid #000;}
+.main_wrap				{width:100%; padding:0px; display:table-cell; background-color:#FFF; border-bottom:1px solid #000;}
 #background_image	 	{display:none;}
 .overlay				{width:100%; height:100%; background-color:#FFF; position:relative;}	/* Overlay colour for background image */
 iati-activity			{margin-bottom:40px;}	/* Fixes too-large bottom margin during only this instance */
@@ -87,7 +87,7 @@ a.about_data.quality	{border-left:1px solid #000; text-align:right; padding-righ
 .default.min			{padding-top:10px;}
 .default.graph			{padding-bottom:60px; padding-top:0;}
 .default.about			{padding:10px 0; text-align:right;}
-.default.data			{padding:20px 0 40px 0;}
+.default.data			{padding:20px 0 40px 0; width:880px;}
 
 
 
@@ -237,9 +237,9 @@ a.stats_link.missing span	{color:#000;}
 
 /*	Active / Ended projects styles
 	============================================= */
-.main_title_wrap			{width:960px; margin:0 auto; padding:60px 20px 0px 20px;}
+.main_title_wrap			{width:960px; margin:0 auto; padding:60px 0 0 0;}
 .main_title_wrap.ended		{padding-bottom:40px;}
-.title_wrap					{width:960px; margin:0 auto; padding:0px 20px 40px 20px; margin-bottom:40px;}
+.title_wrap					{width:960px; margin:0 auto; padding:0 0 40px 0; margin-bottom:40px;}
 .table_wrap					{background-color:#FFF; padding:0; border-radius:8px 8px 0 0; border:1px solid #000; position:relative; width:960px;}
 .table_wrap.main			{padding-bottom:0; border-radius:8px 8px 0 0;}
 .table_wrap.view			{width:920px; margin:0 auto; padding:20px; margin-bottom:40px; border:1px solid #000;}
@@ -365,10 +365,11 @@ a#search_link.search_link_disable:hover	{cursor:default;}
 .search_cont				{margin:auto; border:1px solid #000; border-radius:6px; width:960px; box-sizing:border-box; padding:20px 30px; margin-top:10px; margin-bottom:10px;}
 .search_query				{display:inline-block; vertical-align:top;}
 .search_main				{width:900px;}
-a.search_title				{display:block; color:#000; margin-top:10px; margin-bottom:10px; letter-spacing:5px; font-size:18px; font-weight:bold;}
+a.search_title				{display:inline-block; vertical-align:middle; width:85%; color:#000; margin-top:10px; margin-bottom:10px; letter-spacing:5px; font-size:18px; font-weight:bold;}
 a.search_title:hover		{text-decoration:none;}
 a.search.search_title:before{content:""; display:inline-block; background:url(/ctrack/art/high/search_icon.png)no-repeat center center; width:26px; height:26px; background-size:100%; zoom:70%;}
 a.search.search_title span	{color:#000; font-weight:initial; letter-spacing:1px; line-height:24px; display:inline-block; margin-left:-5px;}
+a.search_refine				{display:inline-block; vertical-align:middle; width:15%;}
 .search_query				{font-size:1.1em; line-height:1.3em; color:#000; padding:10px 30px 10px 0; width:300px; box-sizing:border-box;}
 .search_query span			{font-size:14px; display:block; padding-top:5px; color:#000; line-height:1.2em; text-transform:uppercase;}
 .search_query span img		{padding-right:7px; height:14px; width:14px;}
@@ -444,7 +445,7 @@ table.title td.icon		{padding-right:10px; width:40px; display:none;}
 
 /*	Table for Stats (key figures)
 	============================================= */
-table.stats				{width:990px; max-width:960px; margin:0 auto; border-collapse:separate; border-left:0; border-right:0; margin-bottom: 20px;}
+table.stats				{width:960px; max-width:960px; margin:0 auto; border-collapse:separate; border-left:0; border-right:0; margin-bottom: 20px;}
 table.stats td			{background-color:#FFF; padding:0px; vertical-align:top;}
 
 
