@@ -193,6 +193,7 @@ a.csv_download:hover		{background-color:var(--base04_70); color:var(--base15);}
 /*	For url #view=search
 	============================================= */
 .search_cont				{background-color:var(--base04_70);}
+.search_cont a:hover		{color:var(--base15);}
 a.search_head				{color:var(--base);}
 .search_query				{color:var(--base15);}
 .search_query span			{color:var(--base14);}
@@ -200,6 +201,8 @@ a.search_head				{color:var(--base);}
 .search_clear				{color:var(--base14);}
 .search_clear:hover			{color:var(--base15);}
 .search_clear span			{background-color:var(--base14); color:var(--base04);}
+
+a.search_refine				{border:0; text-shadow:initial; background:none;}
 
 
 /*	For url #view=list_activities	*
