@@ -182,6 +182,7 @@ a.search.search_title span	{color:rgba(85,85,85,1);}
 .search_query				{color:rgba(85,85,85,1);}
 .search_query span			{color:rgba(136,136,136,1);}
 .search_query span img		{-webkit-filter:brightness(50%); filter:brightness(50%);}
+a.search_refine				{border:0; text-shadow:initial; background:none;}
 
 
 /*	Table header styles
