@@ -981,6 +981,9 @@ Year Range
 #search_view_txt
 EXPLORE <span>filters</span>
 
+#search_refine_txt
+Refine Search
+
 #search_text_txt
 Text Search
 
