@@ -950,6 +950,9 @@ An
 #search_view_txt
 EXPLORE <span>filtres</span>
 
+#search_refine_txt
+Affiner la recherche
+
 #search_text_txt
 Recherche texte
 
