@@ -314,7 +314,8 @@
 	<div class="search_cont">
 		<a href="http://d-portal.org/ctrack.html#view=search" class="search search_title">
 			{search_view_txt}
-		</a><div class="search search_main">
+		</a><a href="#" class="search_refine">{search_refine_txt}</a>
+		<div class="search search_main">
 			<div class="search_query">
 				<div class="status_code"></div><span><img src="{flava}search_status.png" alt="Status icon" width="13" height="13"/>{search_status_txt}</span>
 			</div><div class="search_query">
@@ -365,8 +366,9 @@
 	<div class="search_cont">
 		<a href="http://d-portal.org/ctrack.html#view=search" class="search search_title">
 			{search_view_txt}
-		</a><div class="search search_main">
-<div class="search_query">
+		</a><a href="#" class="search_refine">{search_refine_txt}</a>
+		<div class="search search_main">
+			<div class="search_query">
 				<div class="status_code"></div><span><img src="{flava}search_status.png" alt="Status icon" width="13" height="13"/>{search_status_txt}</span>
 			</div><div class="search_query">
 				<div class="recipient"></div><span><img src="{flava}search_country.png" alt="Recipient icon" width="13" height="13"/>{search_recipient_txt}</span>
