@@ -947,6 +947,9 @@ IATI प्रकाशक
 #search_view_txt
 EXPLORE <span>फिल्टर</span>
 
+#search_refine_txt
+खोज परिष्कृत करें
+
 #search_text_txt
 पाठ्य खोज
 
