@@ -950,6 +950,9 @@ IATI出版
 #search_view_txt
 EXPLORE <span>フィルタ</span>
 
+#search_refine_txt
+絞り込み検索
+
 #search_text_txt
 テキスト検索
 
