@@ -947,6 +947,9 @@ Año
 #search_view_txt
 EXPLORE <span>filtros</span>
 
+#search_refine_txt
+Refinar busqueda
+
 #search_text_txt
 Búsqueda de texto
 
