@@ -1,3 +1,11 @@
+Development Portal (2017-12-19 shi)
+==============================
+Minor css fixes
+Added refine search button
+Updated translations
+Updated themes
+
+
 Development Portal (2017-12-15 shi)
 ==============================
 Updated currency span to one line
